--- a/GigHub/Views/Gigs/Create.cshtml
+++ b/GigHub/Views/Gigs/Create.cshtml
@@ -4,7 +4,8 @@
 }
 
 <h2>Add a gig</h2>
-<form>
+@using (Html.BeginForm("Create", "Gigs"))
+{
     <div class="form-group">
         @Html.LabelFor(m => m.Venue)
         @Html.TextBoxFor(m => m.Venue, new { @class = "form-control" })
@@ -24,4 +25,4 @@
 
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
-</form>
+}
