--- a/GigHub/Views/Home/Index.cshtml
+++ b/GigHub/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
             </div>
             <div class="details">
                 <span class="artist">
-                    @gig.Artist.Name
+                    @gig.Artist.Name <button class="btn btn-link btn-sm js-toggle-follow" data-user-id="@gig.ArtistId">Follow</button>
                 </span>
                 <span class="genre">
                     @gig.Genre.Name
@@ -36,7 +36,7 @@
         $(document).ready(function() {
             $(".js-toggle-attendance").click(function (e) {
                 var button = $(e.target);
-                $.post("/api/attendances", { gigId : button.attr("data-gig-id") })
+                $.post("/api/attendances", { gigId: button.attr("data-gig-id") })
                     .done(function () {
                         button
                             .removeClass("btn-default")
@@ -46,7 +46,19 @@
                     .fail(function () {
                         alert("Something failed!");
                     })
-            })
+            });
+
+            $(".js-toggle-follow").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/followings", { followeeId: button.attr("data-user-id") })
+                    .done(function () {
+                        button
+                            .text("Following")
+                    })
+                    .fail(function () {
+                        alert("Something failed!");
+                    })
+            });
         });
     </script>
 }
