--- a/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/Views/Shared/Gigs.cshtml
@@ -1,11 +1,13 @@
-﻿@model IEnumerable<GigHub.Models.Gig>
+﻿@model GigHub.ViewModels.GigsViewModel
 
 @{
     ViewBag.Title = "Home Page";
 }
 
-<ul class="gigs">
-    @foreach(var gig in Model)
+<h1>@Model.Heading</h1>
+
+<ul class="gigs voffset4">
+    @foreach(var gig in Model.UpcomingGigs)
     {
         <li>
             <div class="date">
@@ -18,13 +20,19 @@
             </div>
             <div class="details">
                 <span class="artist">
-                    @gig.Artist.Name <button class="btn btn-link btn-sm js-toggle-follow" data-user-id="@gig.ArtistId">Follow</button>
+                    @gig.Artist.Name
+                    @if (Model.ShowActions)
+                    {
+                        <button class="btn btn-link btn-sm js-toggle-follow" data-user-id="@gig.ArtistId">Follow</button>
+                    }
                 </span>
                 <span class="genre">
                     @gig.Genre.Name
                 </span>
-                <br />
-                <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-left js-toggle-attendance">Going ?</button>
+                @if (Model.ShowActions)
+                {
+                    <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toggle-attendance">Going ?</button>
+                }
             </div>
         </li>
     }
