Implemented gig update operation.

--- a/GigHub/Views/Gigs/Mine.cshtml
+++ b/GigHub/Views/Gigs/Mine.cshtml
@@ -25,6 +25,11 @@
                     @gig.Genre.Name
                 </span>
             </div>
+            <div class="actions">
+                <a href="@Url.Action("Edit", "Gigs", new { id = gig.Id })">
+                    Edit
+                </a>
+            </div>
         </li>
     }
 </ul>
