--- a/GigHub/Content/Site.css
+++ b/GigHub/Content/Site.css
@@ -93,6 +93,7 @@ body {
 
 .form-control {
     font-size: 17px;
+    height: 44px;
     border-radius: 9px;
 }
 
@@ -155,3 +156,12 @@ body {
     .gigs > li .details .genre {
         font-size: 15px;
     }
+
+.gigs > li .actions {
+    font-size: 15px;
+    display: none;
+}
+
+.gigs > li:hover .actions {
+    display: block;
+}
