Search gigs implementation.

--- a/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/Views/Shared/Gigs.cshtml
@@ -6,8 +6,20 @@
 
 <h1>@Model.Heading</h1>
 
+@using (Html.BeginForm("Search", "Gigs"))
+{
+    <div class="form-group">
+        <div id="searchGigs" class="input-group" style="width: 300px">
+            @Html.TextBoxFor(m => m.SearchTerm, new { @class = "form-control", placeholder = "Search by name, genre..." })
+            <span class="input-group-addon">
+                <i class="glyphicon glyphicon-search"></i>
+            </span>
+        </div>
+    </div>
+}
+
 <ul class="gigs voffset4">
-    @foreach(var gig in Model.UpcomingGigs)
+    @foreach (var gig in Model.UpcomingGigs)
     {
         <li>
             <div class="date">
@@ -41,7 +53,7 @@
                 }
             </div>
         </li>
-    }
+        }
 </ul>
 
 @section scripts
