--- a/GigHub/Content/Site.css
+++ b/GigHub/Content/Site.css
@@ -108,6 +108,11 @@ h6,
   -ms-border-radius: 9px;
   border-radius: 9px;
 }
+.form-control:focus {
+  box-shadow: none;
+  transition: none;
+  -webkit-transition: none;
+}
 .btn {
   /*font-size: 17px;
     padding: 7px 20px;*/
@@ -177,5 +182,11 @@ h6,
 }
 .popover-notifications ul.notifications .highlight {
   font-weight: bold;
+}
+#searchGigs {
+  width: 400px;
+}
+#searchGigs input {
+  max-width: none;
 }
 /*# sourceMappingURL=site.css.map */
