--- a/GigHub/Content/site.less
+++ b/GigHub/Content/site.less
@@ -112,8 +112,13 @@ h6,
     height: 44px;
     -ms-border-radius: 9px;
     border-radius: 9px;
+    transition: none;
+    -webkit-transition: none;
 }
 
+.form-control:focus{
+    box-shadow: none;
+}
 
 .btn {
     /*font-size: 17px;
@@ -203,4 +208,10 @@ h6,
     }
 }
 
-
+#searchGigs {
+    width: 400px;
+    
+    input {
+        max-width: none;
+    }
+}
