Revealing module pattern for JS code (separation of concerns/DRY).

--- a/GigHub/Content/site.less
+++ b/GigHub/Content/site.less
@@ -133,7 +133,7 @@ h6,
 
     > li {
         position: relative;
-        margin-bottom: 30px;
+        margin-bottom: 50px;
 
         .date {
             background: red;
@@ -169,7 +169,9 @@ h6,
             }
 
             .genre {
-                font-size: 15px;
+                font-size: 14px;
+                display: block;
+                margin-bottom: 4px;
             }
         }
 
