--- a/GigHub/Views/Shared/_Layout.cshtml
+++ b/GigHub/Views/Shared/_Layout.cshtml
@@ -37,37 +37,38 @@
     </div>
 
     @Scripts.Render("~/bundles/lib")
+    @Scripts.Render("~/bundles/app")
     @RenderSection("scripts", required: false)
 
     <script type="text/x-template" id="notifications-template">
         <ul class="notifications">
             <%
             _.each(notifications, function(notification) {
-                if(notification.type == 1) { %>
-                    <li><span class="highlight"><%= notification.gig.artist.name %></span> has cancelled the gig at <%= notification.gig.venue %> at <%= moment(notification.gig.dateTime).format("D MMM HH:mm") %>.</li>
-                <%}
-                else if(notification.type == 2) { 
-                    var changes = [],
-                        originalValues = [],
-                        newValues = [];
-                    
-                    if(notification.originalValue != notification.gig.venue) {
-                        changes.push("venue");
-                        originalValues.push(notification.originalVenue);
-                        newValues.push(notification.gig.venue);
-                    }
+            if(notification.type == 1) { %>
+            <li><span class="highlight"><%= notification.gig.artist.name %></span> has cancelled the gig at <%= notification.gig.venue %> at <%= moment(notification.gig.dateTime).format("D MMM HH:mm") %>.</li>
+            <%}
+            else if(notification.type == 2) {
+            var changes = [],
+            originalValues = [],
+            newValues = [];
 
-                    if(notification.originalDateTime != notification.gig.dateTime) {
-                        changes.push("date/time");
-                        originalValues.push(moment(notification.originalDateTime).format("D MMM HH:mm"));
-                        newValues.push(moment(notification.gig.dateTime).format("D MMM HH:mm"));
-                    }
-                %>
-                    <li><span class="highlight"><%= notification.gig.artist.name %></span> has changed the <%= changes.join(' and ') %> of the gig from <%= originalValues.join('/') %> to <%= newValues.join('/') %>.</li>
-                <%}
-                else if(notification.type == 3) { %>
-                    <li><span class="highlight"><%= notification.gig.artist.name %></span> has created a gig at <%= notification.gig.venue %> at <%= moment(notification.gig.dateTime).format("D MMM HH:mm") %>.</li>
-                <%}
+            if(notification.originalValue != notification.gig.venue) {
+            changes.push("venue");
+            originalValues.push(notification.originalVenue);
+            newValues.push(notification.gig.venue);
+            }
+
+            if(notification.originalDateTime != notification.gig.dateTime) {
+            changes.push("date/time");
+            originalValues.push(moment(notification.originalDateTime).format("D MMM HH:mm"));
+            newValues.push(moment(notification.gig.dateTime).format("D MMM HH:mm"));
+            }
+            %>
+            <li><span class="highlight"><%= notification.gig.artist.name %></span> has changed the <%= changes.join(' and ') %> of the gig from <%= originalValues.join('/') %> to <%= newValues.join('/') %>.</li>
+            <%}
+            else if(notification.type == 3) { %>
+            <li><span class="highlight"><%= notification.gig.artist.name %></span> has created a gig at <%= notification.gig.venue %> at <%= moment(notification.gig.dateTime).format("D MMM HH:mm") %>.</li>
+            <%}
             })
             %>
         </ul>
